--- a/css/styles.css
+++ b/css/styles.css
@@ -6269,7 +6269,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: #ffffff !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
@@ -10200,15 +10200,15 @@ body {
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
+    color: #505050;
   }
   #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
+    color: #505050;
   }
   #mainNav.navbar-shrink .nav-link.active {
-    color: #64a19d;
+    color: #505050;
     outline: none;
-    border-bottom: 0.25rem solid #64a19d;
+    border-bottom: 0.25rem solid #505050;
   }
 }
 
@@ -10287,7 +10287,7 @@ body {
 @media (min-width: 992px) {
   .projects-section .featured-text {
     padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #64a19d;
+    border-left: 0.5rem solid #505050;
   }
 }
 .projects-section .project-text {
@@ -10299,7 +10299,7 @@ body {
     padding: 5rem;
   }
   .projects-section .project-text hr {
-    border-color: #64a19d;
+    border-color: #ffffff;
     border-width: 0.25rem;
     width: 30%;
   }
@@ -10307,7 +10307,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../assets/img/bg-signup.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../assets/img/demo_three.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
